--- a/package.json
+++ b/package.json
@@ -7,29 +7,30 @@
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^4.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "expo": "^50.0.0",
-    "expo-constants": "~14.2.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-linking": "~4.0.1",
-    "expo-location": "~15.1.1",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.2",
+    "expo-constants": "~15.4.5",
+    "expo-image-picker": "~14.7.1",
+    "expo-linking": "~6.2.2",
+    "expo-location": "~16.5.3",
+    "expo-router": "~3.4.7",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
     "firebase": "^10.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.14",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-maps": "1.3.2",
-    "react-native-reanimated": "~2.14.4",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "1.10.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-root-toast": "^3.5.1",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.6",
+    "babel-preset-expo": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "resolutions": {
